fotorelacjonusz (2.5.1)

  * Added debian packaging script
  * Added overlay thumbnail generation (new format)
  * Added pixels per meter property for overlays
  * Overlay choice based also on ppm
  * Photo report file format changed
  * Version number and compilation time printing

 -- Kamil Ostaszewski <fotorelacjonusz@k14.vdl.pl>

fotorelacjonusz (2.5.2)

  * Windows output stream flushed
  * Compilation date time parsing bug fixed
  * Better exception handling in myexif

 -- Kamil Ostaszewski <fotorelacjonusz@k14.vdl.pl>

fotorelacjonusz (2.5.3)

  * Ftp upload bug on windows fixed
  * Ftp name folder option added
  * Multiple ui field description copy fixed
  * Ftp filenames conversion
  * Branching arrows

 -- Kamil Ostaszewski <fotorelacjonusz@k14.vdl.pl>

fotorelacjonusz (2.5.4)

  * Fixed no map on readded photo bug
  * Added colors undo button
  * Added remove all images menu entry

 -- Kamil Ostaszewski <fotorelacjonusz@k14.vdl.pl>